datafusion/physical-plan/src/match_recognize/snapshots/a_end_anchor.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: A $
---
0: A->1
1: $->2
2*:
