datafusion/physical-plan/src/match_recognize/snapshots/a_optional.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: A?
---
0: ε->1,2
1: A->2
2*:
