datafusion/physical-plan/src/match_recognize/snapshots/alternation_repetition_with_symbol.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: "A{2}|B"
---
0: ε->1,3
1: A->2
2: A->4
3: B->4
4*:
