datafusion/physical-plan/src/match_recognize/snapshots/concat_abc.snap
---
source: datafusion/physical-plan/src/match_recognize/pattern_matcher.rs
expression: A B C
---
0: A->1
1: B->2
2: C->3
3*:
